src/objects/User.object
<CustomObject>
    <fields>
        <fullName>zoom_app__Disable_Invitation_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>user level to disable invitation email,this option is subject to org level setting</inlineHelpText>
        <label>Disable Invitation Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zoom_app__Login_Type__c</fullName>
        <inlineHelpText>Specify Your Zoom Login Type</inlineHelpText>
        <label>Login Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>API</fullName>
                </value>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>Google</fullName>
                </value>
                <value>
                    <fullName>SSO</fullName>
                </value>
                <value>
                    <fullName>Work Email</fullName>
                    <default>true</default>
                    <label>Work Email</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zoom_app__Meeting_Password_Type__c</fullName>
        <defaultValue>3</defaultValue>
        <description>1: use PMI password for None PMI meeting;2: set a password for None PMI meeting;3: generate a random password for None PMI meeting</description>
        <label>Non-PMI Meeting Passcode</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zoom_app__Secret_Token__c</fullName>
        <label>Secret Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__Send_Email_to_Attendee__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Provides an interface to send email to attendees while Launching Zoom Meeting from Start Zoom Meeting button.</inlineHelpText>
        <label>Send Email to Attendees at Launch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zoom_app__Send_ICS_in_Invitation_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Send ICalendar Attachment File in Meeting Invitation Email</description>
        <inlineHelpText>Send ICalendar Attachment File in Meeting Invitation Email</inlineHelpText>
        <label>Send ICS in Invitation Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zoom_app__Webhook_URL__c</fullName>
        <inlineHelpText>Send a notification to Zoom IM Bot if the meeting that you have scheduled did not start within 3 mins of the start time</inlineHelpText>
        <label>Webhook Notification URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__Zoom_Meeting_Password__c</fullName>
        <label>Zoom Meeting Password</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__isPMI_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable it if you want to use your Zoom PMI for creating instant meetings.</inlineHelpText>
        <label>PMI Enabled For Scheduled Meeting</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>